# serializer version: 1
# name: TestGetFeedData.test_feed_file_is_an_attack
  '''
  {
    "articles": [
      {
        "annotations": [],
        "authors": [],
        "content": "",
        "content_type": "text/plain",
        "contributors": [],
        "external_article_id": "https://example.com/attack",
        "is_favorite": false,
        "language": "",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": null,
        "read_at": null,
        "source_title": "Test attack",
        "summary": "&amp;ee",
        "table_of_content": [],
        "tags": [],
        "title": "&d;",
        "updated_at": null,
        "url": "https://example.com/attack"
      }
    ],
    "description": "",
    "etag": "",
    "feed_type": "atom03",
    "feed_url": "https://example.com/feed.xml",
    "last_modified": null,
    "site_url": "https://example.com/alternate",
    "title": "Test attack"
  }
  
  '''
# ---
# name: TestGetFeedData.test_get_feed_data_from_feed_url[sample-atom-feed]
  '''
  {
    "articles": [
      {
        "annotations": [],
        "authors": [],
        "content": "Watch out for\n                <span>\nnasty tricks</span>",
        "content_type": "application/xhtml+xml",
        "contributors": [],
        "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
        "is_favorite": false,
        "language": "en-US",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": "2005-11-09T00:23:47Z",
        "read_at": null,
        "source_title": "Sample Feed",
        "summary": "Watch out for nasty tricks",
        "table_of_content": [],
        "tags": [],
        "title": "First entry title",
        "updated_at": "2005-11-09T11:56:34Z",
        "url": "http://example.org/entry/3"
      },
      {
        "annotations": [],
        "authors": [],
        "content": "",
        "content_type": "text/plain",
        "contributors": [],
        "external_article_id": "https://example.com/articles/with-tags",
        "is_favorite": false,
        "language": "en",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": null,
        "read_at": null,
        "source_title": "Sample Feed",
        "summary": "Super article with tags",
        "table_of_content": [],
        "tags": [
          "Other tag",
          "Tag"
        ],
        "title": "With tags",
        "updated_at": null,
        "url": "https://example.com/articles/with-tags"
      }
    ],
    "description": "For documentation only",
    "etag": "",
    "feed_type": "atom10",
    "feed_url": "https://www.jujens.eu/feed/atom.xml",
    "last_modified": null,
    "site_url": "http://example.org/",
    "title": "Sample Feed"
  }
  
  '''
# ---
# name: TestGetFeedData.test_get_feed_data_from_feed_url[sample-rss-feed]
  '''
  {
    "articles": [
      {
        "annotations": [],
        "authors": [],
        "content": "",
        "content_type": "text/plain",
        "contributors": [],
        "external_article_id": "http://example.org/entry/3",
        "is_favorite": false,
        "language": "",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": "2002-09-05T00:00:01Z",
        "read_at": null,
        "source_title": "Sample Feed",
        "summary": "Watch out for <span>nasty\n                tricks</span>",
        "table_of_content": [],
        "tags": [],
        "title": "First entry title",
        "updated_at": "2002-09-05T00:00:01Z",
        "url": "http://example.org/entry/3"
      }
    ],
    "description": "For documentation only",
    "etag": "",
    "feed_type": "rss20",
    "feed_url": "https://www.jujens.eu/feed/rss.xml",
    "last_modified": null,
    "site_url": "http://example.org/",
    "title": "Sample Feed"
  }
  
  '''
# ---
# name: TestGetFeedData.test_get_feed_data_from_page_url
  '''
  {
    "articles": [
      {
        "annotations": [],
        "authors": [],
        "content": "Watch out for\n                <span>\nnasty tricks</span>",
        "content_type": "application/xhtml+xml",
        "contributors": [],
        "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
        "is_favorite": false,
        "language": "en-US",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": "2005-11-09T00:23:47Z",
        "read_at": null,
        "source_title": "Sample Feed",
        "summary": "Watch out for nasty tricks",
        "table_of_content": [],
        "tags": [],
        "title": "First entry title",
        "updated_at": "2005-11-09T11:56:34Z",
        "url": "http://example.org/entry/3"
      },
      {
        "annotations": [],
        "authors": [],
        "content": "",
        "content_type": "text/plain",
        "contributors": [],
        "external_article_id": "https://example.com/articles/with-tags",
        "is_favorite": false,
        "language": "en",
        "preview_picture_alt": "",
        "preview_picture_url": "",
        "published_at": null,
        "read_at": null,
        "source_title": "Sample Feed",
        "summary": "Super article with tags",
        "table_of_content": [],
        "tags": [
          "Other tag",
          "Tag"
        ],
        "title": "With tags",
        "updated_at": null,
        "url": "https://example.com/articles/with-tags"
      }
    ],
    "description": "For documentation only",
    "etag": "",
    "feed_type": "atom10",
    "feed_url": "https://www.jujens.eu/feeds/all.atom.xml",
    "last_modified": null,
    "site_url": "http://example.org/",
    "title": "Sample Feed"
  }
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[atom-from-youtube]
  '''
  [
    {
      "annotations": [],
      "authors": [
        "Some youtuber"
      ],
      "content": "",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "yt:video:SOME_VIDEO_ID",
      "is_favorite": false,
      "language": "",
      "preview_picture_alt": "The lengthy description of my video!",
      "preview_picture_url": "https://i2.ytimg.com/vi/SOME_VIDEO_ID/hqdefault.jpg",
      "published_at": "2024-03-08T17:00:00Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "The lengthy description of my video!",
      "table_of_content": [],
      "tags": [],
      "title": "What a good video!",
      "updated_at": "2024-03-14T18:49:15Z",
      "url": "https://www.youtube.com/watch?v=SOME_VIDEO_ID"
    }
  ]
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[atom-with-media-description]
  '''
  [
    {
      "annotations": [],
      "authors": [],
      "content": "Watch out for\n                <span>\nnasty tricks</span>",
      "content_type": "application/xhtml+xml",
      "contributors": [],
      "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
      "is_favorite": false,
      "language": "en-US",
      "preview_picture_alt": "My image description My image credit",
      "preview_picture_url": "https://example.com/my-image.jpg",
      "published_at": "2005-11-09T00:23:47Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Watch out for nasty tricks",
      "table_of_content": [],
      "tags": [],
      "title": "First entry title",
      "updated_at": "2005-11-09T11:56:34Z",
      "url": "http://example.org/entry/3"
    },
    {
      "annotations": [],
      "authors": [],
      "content": "",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "https://example.com/articles/with-tags",
      "is_favorite": false,
      "language": "en",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": null,
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Super article with tags",
      "table_of_content": [],
      "tags": [
        "Other tag",
        "Tag"
      ],
      "title": "With tags",
      "updated_at": null,
      "url": "https://example.com/articles/with-tags"
    }
  ]
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[atom-with-media-title]
  '''
  [
    {
      "annotations": [],
      "authors": [],
      "content": "Watch out for\n                <span>\nnasty tricks</span>",
      "content_type": "application/xhtml+xml",
      "contributors": [],
      "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
      "is_favorite": false,
      "language": "en-US",
      "preview_picture_alt": "My image title \u00a9 Tester",
      "preview_picture_url": "https://example.com/my-image.jpg",
      "published_at": "2005-11-09T00:23:47Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Watch out for nasty tricks",
      "table_of_content": [],
      "tags": [],
      "title": "First entry title",
      "updated_at": "2005-11-09T11:56:34Z",
      "url": "http://example.org/entry/3"
    },
    {
      "annotations": [],
      "authors": [],
      "content": "",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "https://example.com/articles/with-tags",
      "is_favorite": false,
      "language": "en",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": null,
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Super article with tags",
      "table_of_content": [],
      "tags": [
        "Other tag",
        "Tag"
      ],
      "title": "With tags",
      "updated_at": null,
      "url": "https://example.com/articles/with-tags"
    }
  ]
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[plain-text]
  '''
  [
    {
      "annotations": [],
      "authors": [],
      "content": "Testing plain text content.",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
      "is_favorite": false,
      "language": "en-US",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": "2005-11-09T00:23:47Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Watch out for nasty tricks",
      "table_of_content": [],
      "tags": [],
      "title": "First entry title",
      "updated_at": "2005-11-09T11:56:34Z",
      "url": "http://example.org/entry/3"
    },
    {
      "annotations": [],
      "authors": [],
      "content": "Testing.",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "https://example.com/articles/with-tags",
      "is_favorite": false,
      "language": "en",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": null,
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Super article with tags",
      "table_of_content": [],
      "tags": [
        "Other tag",
        "Tag"
      ],
      "title": "With plain bis",
      "updated_at": null,
      "url": "https://example.com/articles/with-tags"
    }
  ]
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[sample-atom-feed]
  '''
  [
    {
      "annotations": [],
      "authors": [],
      "content": "Watch out for\n                <span>\nnasty tricks</span>",
      "content_type": "application/xhtml+xml",
      "contributors": [],
      "external_article_id": "tag:feedparser.org,2005-11-09:/docs/examples/atom10.xml:3",
      "is_favorite": false,
      "language": "en-US",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": "2005-11-09T00:23:47Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Watch out for nasty tricks",
      "table_of_content": [],
      "tags": [],
      "title": "First entry title",
      "updated_at": "2005-11-09T11:56:34Z",
      "url": "http://example.org/entry/3"
    },
    {
      "annotations": [],
      "authors": [],
      "content": "",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "https://example.com/articles/with-tags",
      "is_favorite": false,
      "language": "en",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": null,
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Super article with tags",
      "table_of_content": [],
      "tags": [
        "Other tag",
        "Tag"
      ],
      "title": "With tags",
      "updated_at": null,
      "url": "https://example.com/articles/with-tags"
    }
  ]
  
  '''
# ---
# name: TestParseArticlesInFeed.test_parse_articles[sample-rss-feed]
  '''
  [
    {
      "annotations": [],
      "authors": [],
      "content": "",
      "content_type": "text/plain",
      "contributors": [],
      "external_article_id": "http://example.org/entry/3",
      "is_favorite": false,
      "language": "",
      "preview_picture_alt": "",
      "preview_picture_url": "",
      "published_at": "2002-09-05T00:00:01Z",
      "read_at": null,
      "source_title": "Some feed",
      "summary": "Watch out for <span>nasty\n                tricks</span>",
      "table_of_content": [],
      "tags": [],
      "title": "First entry title",
      "updated_at": "2002-09-05T00:00:01Z",
      "url": "http://example.org/entry/3"
    }
  ]
  
  '''
# ---
# name: test_build_feed_data[empty-title]
  '''
  {
    "articles": [],
    "description": "",
    "etag": "",
    "feed_type": "rss",
    "feed_url": "https://example.com/rss",
    "last_modified": null,
    "site_url": "https://example.com",
    "title": "example.com"
  }
  
  '''
# ---
